tests/snapshots/test_serde__dashed_numeric_prerelease.snap
---
source: tests/test_serde.rs
expression: "&release(\"some-api@1.0-1234\")"
---
{
  "package": "some-api",
  "version_raw": "1.0-1234",
  "version_parsed": {
    "major": 1,
    "minor": 0,
    "patch": 0,
    "pre": "1234",
    "build_code": null,
    "components": 2
  },
  "build_hash": null,
  "description": "1.0-1234"
}
