tests/snapshots/test_serde__empty_version.snap
---
source: tests/test_serde.rs
expression: "&release(\"foo@\")"

---
{
  "package": null,
  "version_raw": "foo@",
  "version_parsed": null,
  "build_hash": null,
  "description": "foo@"
}
