tests/snapshots/test_serde__four_components.snap
---
source: tests/test_serde.rs
expression: "&release(\"some-api@1.0.0.0\")"

---
{
  "package": "some-api",
  "version_raw": "1.0.0.0",
  "version_parsed": {
    "major": 1,
    "minor": 0,
    "patch": 0,
    "revision": 0,
    "pre": null,
    "build_code": null,
    "raw_short": "1.0.0.0",
    "components": 4,
    "raw_quad": [
      "1",
      "0",
      "0",
      "0"
    ]
  },
  "build_hash": null,
  "description": "1.0.0.0"
}
