tests/snapshots/test_serde__implied_prerelease.snap
---
source: tests/test_serde.rs
expression: "&release(\"some-api@1.0alpha2\")"

---
{
  "package": "some-api",
  "version_raw": "1.0alpha2",
  "version_parsed": {
    "major": 1,
    "minor": 0,
    "patch": 0,
    "revision": 0,
    "pre": "alpha2",
    "build_code": null,
    "raw_short": "1.0alpha2",
    "components": 2,
    "raw_quad": [
      "1",
      "0",
      null,
      null
    ]
  },
  "build_hash": null,
  "description": "1.0alpha2"
}
