tests/snapshots/test_serde__mobile.snap
---
source: tests/test_serde.rs
expression: "&release(\"foo.bar.baz.App@1.0+20200101100\")"

---
{
  "package": "foo.bar.baz.App",
  "version_raw": "1.0+20200101100",
  "version_parsed": {
    "major": 1,
    "minor": 0,
    "patch": 0,
    "revision": 0,
    "pre": null,
    "build_code": "20200101100",
    "components": 2,
    "raw_quad": [
      "1",
      "0",
      null,
      null
    ]
  },
  "build_hash": null,
  "description": "1.0 (20200101100)"
}
